# controller/admin_login.go
@@ -1,9 +1,15 @@
 package controller
 
 import (
+	"encoding/json"
+	"github.com/e421083458/go_gateway_demo/dao"
 	"github.com/e421083458/go_gateway_demo/dto"
 	"github.com/e421083458/go_gateway_demo/middleware"
+	"github.com/e421083458/go_gateway_demo/public"
+	"github.com/e421083458/golang_common/lib"
+	"github.com/gin-gonic/contrib/sessions"
 	"github.com/gin-gonic/gin"
+	"time"
 )
 
 type AdminLoginController struct {
@@ -12,6 +18,7 @@ type AdminLoginController struct {
 func AdminLoginRegister(group *gin.RouterGroup) {
 	adminLogin := &AdminLoginController{}
 	group.POST("/login", adminLogin.AdminLogin)
+	group.GET("/logout", adminLogin.AdminLogOut)
 }
 
 // AdminLogin godoc
@@ -30,8 +37,51 @@ func (adminlogin *AdminLoginController) AdminLogin(c *gin.Context) {
 		middleware.ResponseError(c, 1001, err)
 		return
 	}
-	out := dto.AdminLoginOutput{
-		Token: params.UserName,
+	tx, err := lib.GetGormPool("default")
+	if err != nil {
+		middleware.ResponseError(c, 2000, err)
+		return
+	}
+	admin := &dao.Admin{}
+	admin, err = admin.LoginCheck(c, tx, params)
+	if err != nil {
+		middleware.ResponseError(c, 2002, err)
+		return
+	}
+
+	sessInfo := &dto.AdminSessionInfo{
+		Id:        admin.Id,
+		UserName:  admin.UserName,
+		LoginTime: time.Now(),
+	}
+	sessBts, err := json.Marshal(sessInfo)
+	if err != nil {
+		middleware.ResponseError(c, 2003, err)
+		return
+	}
+
+	sess := sessions.Default(c)
+	sess.Set(public.AdminSessionInfoKey, string(sessBts))
+	sess.Save()
+
+	out := &dto.AdminLoginOutput{
+		Token: admin.UserName,
 	}
 	middleware.ResponseSuccess(c, out)
+}
+
+// AdminLogin godoc
+// @Summary 管理员退出
+// @Description 管理员退出
+// @Tags 管理员接口
+// @ID /admin_login/logout
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} middleware.Response{data=string} "success"
+// @Router /admin_login/logout [get]
+func (adminlogin *AdminLoginController) AdminLogOut(c *gin.Context) {
+	sess := sessions.Default(c)
+	sess.Delete(public.AdminSessionInfoKey)
+	sess.Save()
+	middleware.ResponseSuccess(c, "")
 }
