# dto/admin_login.go
@@ -3,11 +3,22 @@ package dto
 import (
 	"github.com/e421083458/go_gateway_demo/public"
 	"github.com/gin-gonic/gin"
+	"time"
 )
+
+type AdminSessionInfo struct {
+	Id        int       `json:"id"`
+	UserName  string    `json:"username"`
+	LoginTime time.Time `json:"login_time"`
+}
 
 type AdminLoginInput struct {
 	UserName string `json:"username" form:"username" comment:"管理员用户名" example:"admin" validate:"required,valid_username"` //管理员用户名
 	Password string `json:"password" form:"password" comment:"密码" example:"123456" validate:"required"`                   //密码
+}
+
+type AdminChangePwd struct {
+	Password string
 }
 
 func (param *AdminLoginInput) BindValidParam(c *gin.Context) error {
